--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,8 +11,8 @@
                    <div class="col-lg-9 d-flex justify-content-end align-items-center">
                        <div class="header__left">
                            <ul>
-                               <li><a href="http://localhost/filatelia/" class="activo">Inicio</a></li>
-                               <li><a href="http://localhost/filatelia/tienda">Tienda</a></li>
+                               <li><a >Inicio</a></li>
+                               <li><a>Tienda</a></li>
                                <li><a href="http://localhost/filatelia/subasta">Subasta</a></li>
                                <li><a href="http://localhost/filatelia/catalogo" >Catálogo</a></li>
                            </ul>
