--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -42,68 +42,110 @@
         <h2 class="titulo titulo--mediano">Lo más vendido</h2>
       </div>
       <div class="col-lg-12">
-        <div class="owl-carousel owl-vendido owl-theme">
-          <div class="item">
-            <div class="cardV">
-              <div class="cardV__img">
-                <img src="assets/img/productos/2.png" alt="">
-              </div>
-              <div class="cardV__content">
-                <h3>Estuche para monedas</h3>
-                <ul>
-                  <li>S/13.00</li>
-                  <li>S/13.00</li>
-                </ul>
-                <a href="">Ver más</a>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="cardV">
-              <div class="cardV__img">
-                <img src="assets/img/productos/2.png" alt="">
-              </div>
-              <div class="cardV__content">
-                <h3>Estuche para monedas</h3>
-                <ul>
-                  <li>S/13.00</li>
-                  <li>S/13.00</li>
-                </ul>
-                <a href="">Ver más</a>
+        <owl-carousel-o [options]="owl_vendido" [ngClass]="['owl-vendido','owl-theme']" >
+          <ng-template carouselSlide>
+            <div class="item">
+              <div class="cardV">
+                <div class="cardV__img">
+                  <img src="assets/img/productos/2.png" alt="">
+                </div>
+                <div class="cardV__content">
+                  <h3>Estuche para monedas</h3>
+                  <ul>
+                    <li>S/13.00</li>
+                    <li>S/13.00</li>
+                  </ul>
+                  <a href="">Ver más</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="cardV">
-              <div class="cardV__img">
-                <img src="assets/img/productos/2.png" alt="">
-              </div>
-              <div class="cardV__content">
-                <h3>Estuche para monedas</h3>
-                <ul>
-                  <li>S/13.00</li>
-                  <li>S/13.00</li>
-                </ul>
-                <a href="">Ver más</a>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="cardV">
-              <div class="cardV__img">
-                <img src="assets/img/productos/2.png" alt="">
-              </div>
-              <div class="cardV__content">
-                <h3>Estuche para monedas</h3>
-                <ul>
-                  <li>S/13.00</li>
-                  <li>S/13.00</li>
-                </ul>
-                <a href="">Ver más</a>
+          </ng-template>
+          <ng-template carouselSlide>
+            <div class="item">
+              <div class="cardV">
+                <div class="cardV__img">
+                  <img src="assets/img/productos/2.png" alt="">
+                </div>
+                <div class="cardV__content">
+                  <h3>Estuche para monedas</h3>
+                  <ul>
+                    <li>S/13.00</li>
+                    <li>S/13.00</li>
+                  </ul>
+                  <a href="">Ver más</a>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
+          </ng-template>
+          <ng-template carouselSlide>
+            <div class="item">
+              <div class="cardV">
+                <div class="cardV__img">
+                  <img src="assets/img/productos/2.png" alt="">
+                </div>
+                <div class="cardV__content">
+                  <h3>Estuche para monedas</h3>
+                  <ul>
+                    <li>S/13.00</li>
+                    <li>S/13.00</li>
+                  </ul>
+                  <a href="">Ver más</a>
+                </div>
+              </div>
+            </div>
+          </ng-template>
+          <ng-template carouselSlide>
+            <div class="item">
+              <div class="cardV">
+                <div class="cardV__img">
+                  <img src="assets/img/productos/2.png" alt="">
+                </div>
+                <div class="cardV__content">
+                  <h3>Estuche para monedas</h3>
+                  <ul>
+                    <li>S/13.00</li>
+                    <li>S/13.00</li>
+                  </ul>
+                  <a href="">Ver más</a>
+                </div>
+              </div>
+            </div>
+          </ng-template>
+          <ng-template carouselSlide>
+            <div class="item">
+              <div class="cardV">
+                <div class="cardV__img">
+                  <img src="assets/img/productos/2.png" alt="">
+                </div>
+                <div class="cardV__content">
+                  <h3>Estuche para monedas</h3>
+                  <ul>
+                    <li>S/13.00</li>
+                    <li>S/13.00</li>
+                  </ul>
+                  <a href="">Ver más</a>
+                </div>
+              </div>
+            </div>
+          </ng-template>
+          <ng-template carouselSlide>
+            <div class="item">
+              <div class="cardV">
+                <div class="cardV__img">
+                  <img src="assets/img/productos/2.png" alt="">
+                </div>
+                <div class="cardV__content">
+                  <h3>Estuche para monedas</h3>
+                  <ul>
+                    <li>S/13.00</li>
+                    <li>S/13.00</li>
+                  </ul>
+                  <a href="">Ver más</a>
+                </div>
+              </div>
+            </div>
+          </ng-template>
+        </owl-carousel-o>      
       </div>
     </div>
   </div>
@@ -133,19 +175,17 @@
 <section class="comenzar seccion">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-3 ml-5 pl-5">
-
-        <div>Some tags before</div>
-        <owl-carousel-o [options]="customOptions" [ngClass]="['owl-comenzar','owl-theme']" >
+      <div class="col-lg-3 ml-5 mt-5 pl-5">
+        <owl-carousel-o [options]="owl_comenzar" [ngClass]="['owl-comenzar','owl-theme']" >
           <ng-template carouselSlide>
             <div class="item">
-              <img src="https://via.placeholder.com/600/92c952" alt="img 1">
-            </div>
+                <img src="assets/img/nosotros/1.jpg" alt="">
+            </div>          
           </ng-template>
           <ng-template carouselSlide>
             <div class="item">
-              <img src="https://via.placeholder.com/600/771796" alt="img 2">
-            </div>
+              <img src="assets/img/nosotros/1.jpg" alt="">
+          </div>
           </ng-template>
           <ng-template carouselSlide>
             <div class="item">
