--- a/src/app/pages/dashboard-user/dashboard-user.component.html
+++ b/src/app/pages/dashboard-user/dashboard-user.component.html
@@ -5,7 +5,50 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
+                    <div class="dashboard__color__nombre">
+                        <a href="" class="boton">                                                        
+                                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                    viewBox="0 0 256 256" style="enable-background:new 0 0 256 256;" xml:space="preserve">
+                                <g>
+                                    <g>
+                                        <polygon points="79.093,0 48.907,30.187 146.72,128 48.907,225.813 79.093,256 207.093,128 		"/>
+                                    </g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                <g>
+                                </g>
+                                </svg>
 
+                        </a>
+                        <h2 class="titulo titulo--mediano">Revisa y actualiza tu colección. </h2>
+                    </div>
                 </div>
                 <div class="col-lg-7">
                     <div class="dashboard__tabs">
@@ -14,6 +57,14 @@
                         <a href=""><img src="assets/img/iconos/mancolista.svg" alt="">  <span>Mi Mancolista</span></a>
                         <a href=""><img src="assets/img/iconos/configuracion.svg" alt=""> <span>Configuración</span></a>
                     </div>
+                    <div class="buscador">
+                        <form>
+                             <div class="buscador__content">                                        
+                                 <input type="text">
+                                 <button><img src="assets/img/iconos/buscador.png" alt=""></button>
+                               </div>
+                         </form>
+                     </div>
                 </div>
             </div>
         </div>
@@ -22,7 +73,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <app-mancolista></app-mancolista>
+                    <!--<app-mancolista></app-mancolista>-->
+                    <app-configuracion></app-configuracion>
                 </div>
             </div>
         </div>
