--- a/src/app/components/mancolista/mancolista.component.html
+++ b/src/app/components/mancolista/mancolista.component.html
@@ -18,7 +18,12 @@
     </thead>
     <tbody>
       <tr>
-        <th scope="row">1</th>
+        <th scope="row">
+            <div class="check">
+                <input type="checkbox" name="category" id="c_1" class="css-checkbox" />
+                <label for="c_1" class="css-label"></label>
+            </div>
+        </th>
         <td><img src="assets/img/tabla/1.png" class="img-fluid" alt=""></td>
         <td>Perú</td>
         <td>1987</td>
@@ -28,8 +33,13 @@
         <td><button><img src="assets/img/iconos/eliminar.svg" alt=""></button> </td>
       </tr>
       <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
+        <th scope="row">
+            <div class="check">
+                <input type="checkbox" name="category" id="c_2" class="css-checkbox" />
+                <label for="c_2" class="css-label"></label>
+            </div>
+        </th>
+        <td><img src="assets/img/tabla/1.png" class="img-fluid" alt=""></td>
         <td>Perú</td>
         <td>1987</td>
         <td>Hombres célebres</td>
@@ -38,8 +48,13 @@
         <td><button><img src="assets/img/iconos/eliminar.svg" alt=""></button> </td>
       </tr>
       <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
+        <th scope="row">
+            <div class="check">
+                <input type="checkbox" name="category" id="c_3" class="css-checkbox" />
+                <label for="c_3" class="css-label"></label>
+            </div>
+        </th>
+        <td><img src="assets/img/tabla/1.png" class="img-fluid" alt=""></td>
         <td>Perú</td>
         <td>1987</td>
         <td>Hombres célebres</td>
@@ -48,8 +63,13 @@
         <td><button><img src="assets/img/iconos/eliminar.svg" alt=""></button> </td>
       </tr>
       <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
+        <th scope="row">
+            <div class="check">
+                <input type="checkbox" name="category" id="c_4" class="css-checkbox" />
+                <label for="c_4" class="css-label"></label>
+            </div>
+        </th>
+        <td><img src="assets/img/tabla/1.png" class="img-fluid" alt=""></td>
         <td>Perú</td>
         <td>1987</td>
         <td>Hombres célebres</td>
