--- a/src/app/components/configuracion/configuracion.component.html
+++ b/src/app/components/configuracion/configuracion.component.html
@@ -1,9 +1,9 @@
 <p>Aquí podrás gestionar las opciones de tu perfíl</p>
-<div class="row">
+<form class="row">
     <div class="col-lg-4">
         <div class="dashboard__contenido__formulario">
             <h2 class="titulo titulo--chico">Información del usuario</h2>
-            <form class="row">
+            <div class="form row">
                 <div class="form-group col-lg-12">
                   <label for="exampleInputEmail1">Nombre</label>
                   <input type="email" class="form-control">                              
@@ -20,16 +20,16 @@
                     <label for="">Contraseña</label>
                     <input type="password" class="form-control" id="exampleCheck1">                              
                   </div>
-                <div class="col-lg-7">
-                    <button type="submit" class="btn btn--negro">Cambiar contraseña</button>
+                <div class="col-lg-12">
+                    <button type="submit" class="btn btn--linea">Cambiar contraseña</button>
                 </div>               
-            </form>
+            </div>
         </div>        
     </div>
     <div class="col-lg-4">
         <div class="dashboard__contenido__formulario">
             <h2 class="titulo titulo--chico">Dirección</h2>
-            <form class="row">
+            <div class="form row">
                 <div class="form-group col-lg-12">
                   <label for="exampleInputEmail1">Línea 1</label>
                   <input type="email" class="form-control">                              
@@ -53,12 +53,43 @@
                 <div class="form-group col-lg-12">
                     <label for="">Povincia</label>
                     <input type="password" class="form-control" id="exampleCheck1">                              
-                </div>
-                <div class="col-lg-7">
-                    <button type="submit" class="btn btn--negro">Cambiar contraseña</button>
-                </div>               
-            </form>
+                </div>                              
+            </div>
         </div>        
     </div>
-</div>
+    <div class="col-lg-4">
+        <div class="dashboard__contenido__formulario">
+            <h2 class="titulo titulo--chico">Notificaciones de subastas</h2>
+            <div class="row">
+                <div class="form-group col-lg-12">
+                    <div class = "nhabep">
+                        <span>Correo electrónico</span>
+                        <div class="nhabep__check">
+                            <input id = "quatnb" class = "toggle toggle-flat" type = "checkbox">
+                            <label for = "quatnb"> </label>
+                        </div>
+                      </div>
+                </div>
+                <div class="form-group col-lg-12">
+                    <div class = "nhabep">
+                        <span>SMS</span>
+                        <div class="nhabep__check">
+                            <input id = "quatnb2" class = "toggle toggle-flat" type = "checkbox">
+                            <label for = "quatnb2"> </label>
+                        </div>
+                      </div>
+                </div>
+                <div class="form-group col-lg-12">
+                    <div class = "nhabep">
+                        <span>Whatsapp</span>
+                        <div class="nhabep__check">
+                            <input id = "quatnb3" class = "toggle toggle-flat" type = "checkbox">
+                            <label for = "quatnb3"> </label>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
 
