--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -44,8 +44,8 @@
           <div class="col-lg-3">
               <div class="footer__content">
                   <h3>Mi cuenta</h3>
-                  <a href="">Iniciar sesión</a>
-                  <a href="">Regístrate gratis</a>
+                  <a href="/auth/login">Iniciar sesión</a>
+                  <a href="/auth/register">Regístrate gratis</a>
               </div>
               <div class="footer__content">
                   <h3>Mi catálogo</h3>
