--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,10 +11,10 @@
                    <div class="col-lg-9 d-flex justify-content-end align-items-center">
                        <div class="header__left">
                            <ul>
-                               <li><a >Inicio</a></li>
-                               <li><a>Tienda</a></li>
-                               <li><a href="http://localhost/filatelia/subasta">Subasta</a></li>
-                               <li><a href="http://localhost/filatelia/catalogo" >Catálogo</a></li>
+                               <li ><a href="" >Inicio</a></li>
+                               <li ><a href="/tienda">Tienda</a></li>
+                               <li><a >Subasta</a></li>
+                               <li><a >Catálogo</a></li>
                            </ul>
                        </div>
                    </div>
@@ -26,8 +26,8 @@
                    <div class="header__right">
                        <ul>
                            <li><a href="">Contacto</a></li>
-                           <li><a href="">Registrate</a></li>
-                           <li><a href="">Iniciar Sesión</a></li>
+                           <li><a href="/auth/register">Registrate</a></li>
+                           <li><a href="/auth/login">Iniciar Sesión</a></li>
                        </ul>
                    </div>
                </div>
