--- a/src/app/user/dashboard-user/dashboard-user.component.html
+++ b/src/app/user/dashboard-user/dashboard-user.component.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="dashboard__color__nombre">
-                        <a href="" class="boton">                                                        
+                        <a href="" class="boton">
                                 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                     viewBox="0 0 256 256" style="enable-background:new 0 0 256 256;" xml:space="preserve">
                                 <g>
@@ -59,7 +59,7 @@
                     </div>
                     <div class="buscador">
                         <form>
-                             <div class="buscador__content">                                        
+                             <div class="buscador__content">
                                  <input type="text">
                                  <button><img src="assets/img/iconos/buscador.png" alt=""></button>
                                </div>
@@ -73,8 +73,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <!--<app-mancolista></app-mancolista>-->
-                    <app-configuracion></app-configuracion>
+                    <app-mancolista></app-mancolista>
+                    <!--<app-configuracion></app-configuracion>-->
                 </div>
             </div>
         </div>
