--- a/src/app/user/dashboard-user/dashboard-user.component.html
+++ b/src/app/user/dashboard-user/dashboard-user.component.html
@@ -52,10 +52,10 @@
                 </div>
                 <div class="col-lg-7">
                     <div class="dashboard__tabs">
-                        <a href=""><img src="assets/img/iconos/subasta.svg" alt=""> <span>Subastas</span></a>
-                        <a href=""><img src="assets/img/iconos/tienda.svg" alt="">  <span>Tienda</span></a>
-                        <a href=""><img src="assets/img/iconos/mancolista.svg" alt="">  <span>Mi Mancolista</span></a>
-                        <a href=""><img src="assets/img/iconos/configuracion.svg" alt=""> <span>Configuración</span></a>
+                        <a><img src="assets/img/iconos/subasta.svg" alt=""> <span>Subastas</span></a>
+                        <a><img src="assets/img/iconos/tienda.svg" alt="">  <span>Tienda</span></a>
+                        <a><img src="assets/img/iconos/mancolista.svg" alt="">  <span>Mi Mancolista</span></a>
+                        <a routerLink="configuracion" ><img src="assets/img/iconos/configuracion.svg" alt=""> <span>Configuración</span></a>
                     </div>
                     <div class="buscador">
                         <form>
@@ -73,8 +73,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <app-mancolista></app-mancolista>
-                    <!--<app-configuracion></app-configuracion>-->
+
                 </div>
             </div>
         </div>
