add subasta tienda

--- a/src/app/user/dashboard-user/dashboard-user.component.html
+++ b/src/app/user/dashboard-user/dashboard-user.component.html
@@ -1,5 +1,3 @@
-<app-header></app-header>
-
 <section class="dashboard m-top">
     <div class="dashboard__color">
         <div class="container">
@@ -52,9 +50,9 @@
                 </div>
                 <div class="col-lg-7">
                     <div class="dashboard__tabs">
-                        <a><img src="assets/img/iconos/subasta.svg" alt=""> <span>Subastas</span></a>
-                        <a><img src="assets/img/iconos/tienda.svg" alt="">  <span>Tienda</span></a>
-                        <a><img src="assets/img/iconos/mancolista.svg" alt="">  <span>Mi Mancolista</span></a>
+                        <a routerLink="subasta"><img src="assets/img/iconos/subasta.svg" alt=""> <span>Subastas</span></a>
+                        <a routerLink="tienda"><img src="assets/img/iconos/tienda.svg" alt="">  <span>Tienda</span></a>
+                        <a routerLink="mancolista"><img src="assets/img/iconos/mancolista.svg" alt="">  <span>Mi Mancolista</span></a>
                         <a routerLink="configuracion" ><img src="assets/img/iconos/configuracion.svg" alt=""> <span>Configuración</span></a>
                     </div>
                     <div class="buscador">
@@ -73,11 +71,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-
+                  <router-outlet></router-outlet>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
-<app-footer></app-footer>
