header-dashboard-user

--- a/src/app/user/dashboard-user/dashboard-user.component.html
+++ b/src/app/user/dashboard-user/dashboard-user.component.html
@@ -1,3 +1,6 @@
+<!-- header-user -->
+<app-header-user></app-header-user>
+
 <section class="dashboard m-top">
     <div class="dashboard__color">
         <div class="container">
@@ -77,3 +80,5 @@
         </div>
     </div>
 </section>
+
+<app-footer></app-footer>
